--- a/admin.html
+++ b/admin.html
@@ -492,7 +492,7 @@ function render(data) {
       <tr>
         <td>${r["No"]}</td>
         <td>${r["Tanggal"]}</td>
-        <td>${r["Nama Obat"]}</td>
+        <td>${r["Nama Outlet"]}</td>
         <td>${r["Online / Tidak"]}</td>
         <td>${r["No SPK"]}</td>
         <td>${r["No ID Paket"]}</td>
