--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ td {
   <div class="search-box">
     <input
       id="keyword"
-      placeholder="Cari nama obat / SPK / faktur"
+      placeholder="Cari nama outlet / SPK / faktur"
       onkeydown="if(event.key==='Enter') cari()"
     >
     <button onclick="cari()">Search</button>
