--- a/input.html
+++ b/input.html
@@ -1,102 +1,75 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
+<meta hcharset="UTF-8">
 <title>ADMIN - FARMA</title>
 
 
 <style>
-* { box-sizing: border-box; }
+* {
+  box-sizing: border-box;
+}
 
 
 body {
   margin: 0;
   font-family: "Segoe UI", Arial, sans-serif;
-  background: #dff1d8;
-  color: #333;
+  background: #dff0d8;
 }
 
 
-/* ===== LOGOUT ===== */
-.logout-btn {
-  position: fixed;
-  top: 26px;
-  right: 32px;
-  background: none;
-  border: none;
-  cursor: pointer;
-  z-index: 50;
-}
-.logout-btn svg {
-  width: 30px;
-  height: 30px;
-  stroke: #d32f2f;
-}
-.logout-btn:hover svg {
-  stroke: #b71c1c;
-}
-
-
-/* ===== HERO + WAVE ===== */
-.hero {
+/* ===== HEADER ===== */
+.header {
+  padding: 30px 40px 10px;
   position: relative;
-  padding: 110px 40px 180px;
-  overflow: hidden;
 }
 
 
-.wave-top {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 220px;
-}
-
-
-.hero-inner {
-  max-width: 1300px;
-  margin: auto;
-}
-
-
-.hero h1 {
-  margin: 0;
-  font-size: 56px;
-  font-weight: 900;
+.header h1 {
   color: #7cb342;
+  font-size: 48px;
+  margin: 0;
+  font-weight: 800;
 }
 
 
-/* ===== FORM AREA ===== */
-.admin-page {
-  position: relative;
-  margin-top: -160px;
-  padding: 0 40px;
-}
+/* logout */
+.logout-btn {
+  position: absolute;
+  top: 30px;
+  right: 40px;
 
 
-.form-container {
-  max-width: 1300px;
-  margin: auto;
-}
-
-
-.card {
   background: transparent;
-  padding: 30px 10px 10px;
+  border: none;
+  padding: 6px;
+
+
+  color: #d32f2f;          /* merah */
+  cursor: pointer;
+
+
+  transition: transform 0.2s ease, color 0.2s ease;
+}
+
+
+.logout-btn:hover {
+  color: #b71c1c;
+  transform: scale(1.1);
+}
+
+
+/* ===== CARD FORM ===== */
+.card {
+  background: #dff0d8;
+  padding: 30px 40px;
 }
 
 
 .form-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 26px 40px;
-}
-
-
-.form-field {
-  max-width: 520px;
+  gap: 24px 40px;
 }
 
 
@@ -106,54 +79,41 @@ label {
 }
 
 
-.required {
-  color: #d32f2f;
-  font-weight: 700;
-}
-
-
-input {
+input, select {
   width: 100%;
   padding: 12px 18px;
-  border-radius: 999px;
-  border: 1.5px solid rgba(0,0,0,0.6);
-  background: #d9f0d5;
+  border-radius: 25px;
+  border: 1px solid #8e8b8bd2;
+  background: transparent;
   outline: none;
+
+
+  appearance: none;        /* 🔥 PENTING: hapus dropdown bawaan browser */
 }
+
+
+
+
 
 
 input:focus {
-  border-color: #7cb342;
+  border-color: #558b2f;
 }
 
 
-/* ===== SUBMIT + DIVIDER (FIXED) ===== */
+/* submit */
 .submit-wrap {
-  position: relative;
   display: flex;
   justify-content: flex-end;
-  margin-top: 36px;
-  padding-bottom: 36px;
-}
-
-
-/* DIVIDER PERSIS DESAIN */
-.submit-wrap::after {
-  content: "";
-  position: absolute;
-  left: -40px;
-  right: -40px;
-  bottom: 0;
-  height: 2px;
-  background: rgba(0,0,0,0.35);
+  margin-top: 25px;
 }
 
 
 .submit-wrap button {
   background: #1e5aa7;
-  color: #fff;
-  padding: 14px 30px;
-  border-radius: 999px;
+  color: white;
+  padding: 14px 28px;
+  border-radius: 30px;
   border: none;
   font-weight: bold;
   cursor: pointer;
@@ -162,174 +122,237 @@ input:focus {
 
 /* ===== HISTORY ===== */
 .history {
-  margin-top: 0;
-  padding: 20px 40px 80px;
+  border-top: 2px solid #999;
+  padding: 25px 40px 40px;
 }
 
 
-/* ===== HISTORY TITLE (FIX SESUAI DESAIN) ===== */
+.history h3 {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 15px;
+}
+
+
+.search-box input {
+  max-width: 420px;
+  padding: 12px 18px;
+  border-radius: 25px;
+  border: 1px solid #aaa;
+  margin-bottom: 15px;
+}
+
+
+/* ===== TABLE ===== */
+/* container putih di belakang tabel */
+.table-container {
+  max-width: 1200px;          /* 🔥 ini kunci: tabel tidak terlalu besar */
+  margin: 0 auto;             /* center horizontal */
+  background: #ffffff;
+  padding: 16px;              /* jarak putih di sekitar tabel */
+  border-radius: 14px;
+}
+
+
+/* wrapper tabel */
+.table-wrapper {
+  width: 100%;
+  overflow-x: auto;
+  overflow: hidden;
+}
+
+
+/* tabel */
+table {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0;
+  background: #fff;
+  border-radius: 10px;
+
+
+  /* 🔥 GARIS TEPI LUAR */
+  border: 1.5px solid #dcdcdc;
+}
+
+
+th {
+  background: #f3f3f3;
+  padding: 10px;
+  text-align: left;
+}
+
+
+td {
+  padding: 10px;
+  border-top: 1px solid #eee;
+}
+
+
+.actions button {
+  background: #1e5aa7;
+  color: white;
+  border: none;
+  padding: 6px 14px;
+  border-radius: 16px;
+  cursor: pointer;
+}
+
+
 .history-title {
   display: flex;
   align-items: center;
-  gap: 12px;
-
-
-  font-size: 20px;          /* 🔥 lebih besar */
-  font-weight: 800;         /* 🔥 lebih tebal */
-  color: #000;              /* 🔥 hitam solid */
-
-
-  margin-top: 18px;         /* dekat divider */
-  margin-bottom: 18px;
+  gap: 10px;
+  font-size: 18px;
+  font-weight: 700;
+  color: #000;
 }
 
 
-/* ICON HISTORY */
-.history-title::before {
-  content: "";
-  width: 34px;
-  height: 34px;
-
-
-  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' fill='none' stroke='black' stroke-width='2.5' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3 12a9 9 0 1 0 3-6.7'/%3E%3Cpath d='M3 4v5h5'/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-
-
-  flex-shrink: 0;
+.history-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 
-
-
-/* ===== SEARCH (PANJANG SEPERTI DESAIN) ===== */
+/* wrapper agar search di tengah */
 .search-wrapper {
-  position: relative;
-  z-index: 5;
   display: flex;
   justify-content: center;
-  margin-top: -28px;
-  margin-bottom: 24px;
+  margin: 10px 0 20px;
 }
 
 
+/* box search */
 .search-box {
   position: relative;
-  width: 520px;          /* 🔥 PANJANG SEARCH */
-  max-width: 90%;        /* aman di layar kecil */
+  width: 420px;
 }
 
 
+/* icon kaca pembesar */
 .search-icon {
   position: absolute;
-  left: 18px;
+  left: 16px;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(-70%); /* ⬆️ naik lebih tegas */
   color: #333;
   pointer-events: none;
 }
 
 
+/* input search */
 .search-box input {
-  width: 100%;           /* 🔥 PENTING */
+  width: 100%;
   padding: 12px 18px 12px 46px;
-  border-radius: 999px;
-  border: 1.5px solid rgba(0,0,0,0.6);
-  background: #dff1d8;
+
+
+  border-radius: 16px;      /* 🔥 sudut lebih natural */
+  border: 1px solid #333;   /* 🔥 garis lebih tipis */
+
+
   outline: none;
   font-size: 14px;
-}
-
-
-
-
-
-
-/* ===== TABLE ===== */
-.table-container {
-  max-width: 1300px;
-  margin: auto;
-  background: #fff;
-  padding: 22px 26px;
-  border-radius: 18px;
-  box-shadow: 0 14px 34px rgba(0,0,0,0.12);
-}
-
-
-.table-wrapper {
-  max-height: 520px;
-  overflow-y: auto;
-  border-radius: 10px;
-}
-
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-  font-size: 13px;
-}
-
-
-th, td {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: center;
+  background: transparent;
 }
 
 
 th {
-  background: #f1f1f1;
-  position: sticky;
-  top: 0;
-  z-index: 2;
+  font-size: 14px;
+  font-weight: 600;
+  white-space: nowrap;
 }
 
 
-tbody td {
-  border-bottom: 2px solid #e0e0e0;
-}
-/* ===== TABLE HEADER ICON ===== */
 .th-icon {
   display: inline-flex;
   align-items: center;
-  gap: 6px;
   margin-right: 6px;
   vertical-align: middle;
 }
 
 
 .th-icon svg {
-  width: 14px;
-  height: 14px;
+  width: 16px;
+  height: 16px;
   stroke: #000;
   fill: none;
   stroke-width: 2;
 }
 
 
-.actions button {
-  padding: 6px 14px;
-  background: #1e4fa1;
-  color: #fff;
-  border: none;
-  border-radius: 6px;
-  font-size: 12px;
-  font-weight: bold;
+th, td {
+  padding: 14px 16px;
+  font-size: 14px;
+  white-space: nowrap;
+}
+
+
+/* 🔥 hapus garis di kolom terakhir */
+th:last-child,
+td:last-child {
+  border-right: none;
+}
+
+
+thead th {
+  background: #f6f6f6;
+  border-bottom: 2px solid #d6d6d6;
+  border-right: 1.5px solid #dcdcdc;
+}
+
+
+tbody td {
+  border-bottom: 1.5px solid #e0e0e0;
+  border-right: 1.5px solid #dcdcdc;
+}
+
+
+tbody tr:last-child td {
+  border-bottom: none;
+}
+
+
+.required {
+  color: #d32f2f; /* merah seperti contoh */
+  margin-left: 2px;
+  font-weight: 700;
+}
+
+
+/* ===== FORM FIELD ===== */
+.form-field {
+  max-width: 520px; /* 🔥 PANJANG INPUT SEPERTI GAMBAR KEDUA */
+}
+
+
+/* input & select tidak full grid */
+/* ===== DROPDOWN ICON (KHUSUS SELECT) ===== */
+.form-field select {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='black' stroke-width='2'%3E%3Cpolyline points='6 9 12 15 18 9'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 18px center;
+  background-size: 16px;
   cursor: pointer;
 }
-.actions button:hover {
-  background: #163c7a;
-}
 
 
-/* ===== WAVE BOTTOM ===== */
-.wave-bottom {
+
+
+.admin-page {
   width: 100%;
-  height: 200px;
+  display: flex;
+  justify-content: center; /* center horizontal */
 }
 
 
+.form-container {
+  width: 100%;
+  max-width: 1100px; /* ini yang bikin ke tengah seperti gambar ke-2 */
+  padding: 32px;
+}
 </style>
 
 
@@ -340,137 +363,143 @@ tbody td {
 <body>
 
 
-<!-- LOGOUT -->
-<button class="logout-btn" onclick="keluar()">
-  <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-    <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/>
-    <polyline points="16 17 21 12 16 7"/>
-    <line x1="21" y1="12" x2="9" y2="12"/>
+<!-- HEADER -->
+<div class="header">
+  <h1>ADMIN</h1>
+  <button class="logout-btn" onclick="keluar()" title="Keluar">
+  <svg width="26" height="26" viewBox="0 0 24 24" fill="none"
+       xmlns="http://www.w3.org/2000/svg">
+    <rect x="3" y="3" width="12" height="18" rx="2"
+          stroke="currentColor" stroke-width="2"/>
+    <path d="M10 12H21M21 12L18 9M21 12L18 15"
+          stroke="currentColor" stroke-width="2"
+          stroke-linecap="round" stroke-linejoin="round"/>
   </svg>
 </button>
-
-
-<!-- HERO -->
-<section class="hero">
-  <svg class="wave-top" viewBox="0 0 1440 220" preserveAspectRatio="none">
-    <path fill="#ffffff"
-      d="M0,120 C240,60 480,20 720,40
-         C960,60 1200,120 1440,90
-         L1440,0 L0,0 Z"/>
-  </svg>
-
-
-  <div class="hero-inner">
-    <h1>ADMIN</h1>
-  </div>
-</section>
+</div>
 
 
 <!-- FORM -->
-<section class="admin-page">
+<div class="admin-page">
 <div class="form-container">
 <div class="card">
+  <input type="hidden" id="edit_row">
 
 
-<input type="hidden" id="edit_row">
+  <div class="form-grid">
+    <div class="form-field">
+      <label>Nama Outlet<span class="required">*</span></label>
+      <input id="nama_outlet" placeholder="nama outlet">
+    </div>
+    <div class="form-field">
+      <label>No ID Paket<span class="required">*</span></label>
+      <input id="no_id_paket" placeholder="no id paket">
+    </div>
 
 
-<div class="form-grid">
-  <div class="form-field">
-    <label>Nama Outlet<span class="required">*</span></label>
-    <input id="nama_outlet">
+    <div class="form-field">
+  <label>Status<span class="required">*</span></label>
+    <select id="online">
+      <option value="">-- Pilih Status --</option>
+      <option value="Online">Online</option>
+      <option value="Tidak Online">Tidak</option>
+    </select>
   </div>
-  <div class="form-field">
-    <label>No ID Paket<span class="required">*</span></label>
-    <input id="no_id_paket">
+
+
+    <div class="form-field">
+      <label>Nominal<span class="required">*</span></label>
+      <input id="nominal" placeholder="nominal">
+    </div>
+
+
+    <div class="form-field">
+      <label>No SPK<span class="required">*</span></label>
+      <input id="no_spk" placeholder="no SPK">
+    </div>
+    <div class="form-field">
+      <label>No Faktur<span class="required">*</span></label>
+      <input id="no_faktur" placeholder="no faktur">
+    </div>
+
+
+   <div class="form-field">
+      <label>PIC Salesmen<span class="required">*</span></label>
+      <input id="pic_salesman" placeholder="pic salesman">
+    </div>
   </div>
-  <div class="form-field">
-    <label>Status<span class="required">*</span></label>
-    <input id="online">
-  </div>
-  <div class="form-field">
-    <label>Nominal<span class="required">*</span></label>
-    <input id="nominal">
-  </div>
-  <div class="form-field">
-    <label>No SPK<span class="required">*</span></label>
-    <input id="no_spk">
-  </div>
-  <div class="form-field">
-    <label>No Faktur<span class="required">*</span></label>
-    <input id="no_faktur">
-  </div>
-  <div class="form-field">
-    <label>PIC Salesmen<span class="required">*</span></label>
-    <input id="pic_salesman">
+
+
+
+
+
+
+  <div class="submit-wrap">
+    <button onclick="simpan()">Submit or Update</button>
   </div>
 </div>
-
-
-<div class="submit-wrap">
-  <button onclick="simpan()">Submit or Update</button>
-</div>
-
-
 </div>
 </div>
-</section>
 
 
 <!-- HISTORY -->
-<section class="history">
-<h3 class="history-title">History</h3>
+<div class="history">
+  <h3 class="history-title">
+  <span class="history-icon">
+    <svg width="26" height="26" viewBox="0 0 24 24" fill="none"
+         xmlns="http://www.w3.org/2000/svg">
+      <path d="M3 12a9 9 0 1 0 3-6.7"
+            stroke="currentColor"
+            stroke-width="2.2"
+            stroke-linecap="round"
+            stroke-linejoin="round"/>
+      <path d="M3 4v5h5"
+            stroke="currentColor"
+            stroke-width="2.2"
+            stroke-linecap="round"
+            stroke-linejoin="round"/>
+    </svg>
+  </span>
+  History
+</h3>
 
 
-<div class="search-wrapper">
+  <div class="search-wrapper">
   <div class="search-box">
     <span class="search-icon">
-      <svg
-        width="18"
-        height="18"
-        viewBox="0 0 24 24"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <circle cx="11" cy="11" r="7" stroke="currentColor" stroke-width="2"/>
-        <line
-          x1="16.65"
-          y1="16.65"
-          x2="21"
-          y2="21"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-        />
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none"
+           xmlns="http://www.w3.org/2000/svg">
+        <circle cx="11" cy="11" r="7"
+                stroke="currentColor" stroke-width="2"/>
+        <line x1="16.65" y1="16.65"
+              x2="21" y2="21"
+              stroke="currentColor" stroke-width="2"
+              stroke-linecap="round"/>
       </svg>
     </span>
-
-
     <input
       id="searchInput"
       placeholder="Search"
       onkeyup="filterTable()"
-    />
+    >
   </div>
 </div>
 
 
-
-
 <div class="table-container">
-<div class="table-wrapper">
-<table>
-<thead>
+  <div class="table-wrapper">
+    <table>
+      <thead>
   <tr>
     <th>No</th>
 
 
     <th>
       <span class="th-icon">
-        <!-- user -->
+        <!-- user icon -->
         <svg viewBox="0 0 24 24">
           <circle cx="12" cy="8" r="4"/>
-          <path d="M4 20c2-4 14-4 16 0"/>
+          <path d="M4 20c0-4 4-6 8-6s8 2 8 6"/>
         </svg>
       </span>
       Nama Outlet
@@ -479,11 +508,11 @@ tbody td {
 
     <th>
       <span class="th-icon">
-        <!-- list -->
+        <!-- list icon -->
         <svg viewBox="0 0 24 24">
-          <line x1="8" y1="6" x2="21" y2="6"/>
-          <line x1="8" y1="12" x2="21" y2="12"/>
-          <line x1="8" y1="18" x2="21" y2="18"/>
+          <line x1="8" y1="6" x2="20" y2="6"/>
+          <line x1="8" y1="12" x2="20" y2="12"/>
+          <line x1="8" y1="18" x2="20" y2="18"/>
           <circle cx="4" cy="6" r="1"/>
           <circle cx="4" cy="12" r="1"/>
           <circle cx="4" cy="18" r="1"/>
@@ -493,36 +522,18 @@ tbody td {
     </th>
 
 
-    <th>
-      <span class="th-icon">#</span>
-      No SPK
-    </th>
-
-
-    <th>
-      <span class="th-icon">#</span>
-      No ID Paket
-    </th>
-
-
-    <th>
-      <span class="th-icon">#</span>
-      Nominal
-    </th>
-
-
-    <th>
-      <span class="th-icon">#</span>
-      No Faktur
-    </th>
+    <th><span class="th-icon">#</span> No SPK</th>
+    <th><span class="th-icon">#</span> No ID Paket</th>
+    <th><span class="th-icon">#</span> Nominal</th>
+    <th><span class="th-icon">#</span> No Faktur</th>
 
 
     <th>
       <span class="th-icon">
-        <!-- user -->
+        <!-- user icon -->
         <svg viewBox="0 0 24 24">
           <circle cx="12" cy="8" r="4"/>
-          <path d="M4 20c2-4 14-4 16 0"/>
+          <path d="M4 20c0-4 4-6 8-6s8 2 8 6"/>
         </svg>
       </span>
       PIC
@@ -531,7 +542,7 @@ tbody td {
 
     <th>
       <span class="th-icon">
-        <!-- info -->
+        <!-- info icon -->
         <svg viewBox="0 0 24 24">
           <circle cx="12" cy="12" r="9"/>
           <line x1="12" y1="10" x2="12" y2="16"/>
@@ -544,7 +555,7 @@ tbody td {
 
     <th>
       <span class="th-icon">
-        <!-- edit -->
+        <!-- edit icon -->
         <svg viewBox="0 0 24 24">
           <path d="M4 20h4l10-10-4-4L4 16v4z"/>
         </svg>
@@ -553,32 +564,22 @@ tbody td {
     </th>
   </tr>
 </thead>
-
-
-<tbody id="tbody"></tbody>
-</table>
+      <tbody id="tbody"></tbody>
+    </table>
+  </div>
 </div>
-</div>
-</section>
 
 
-<!-- WAVE BOTTOM -->
-<svg class="wave-bottom" viewBox="0 0 1440 200" preserveAspectRatio="none">
-  <path fill="#dff1d8"
-    d="M0,60 C240,120 480,140 720,120
-       C960,100 1200,40 1440,80
-       L1440,200 L0,200 Z"/>
-</svg>
-
-
-<!-- ================= JS ADMIN FARMA (ASLI, TIDAK DIUBAH) ================= -->
+<!-- ===== JS ASLI (TIDAK DIUBAH) ===== -->
 <script>
 if (sessionStorage.getItem("role") !== "farma") {
   alert("Akses ditolak.");
   window.location.replace("pin-farma.html");
 }
+</script>
 
 
+<script>
 const API_URL = "https://script.google.com/macros/s/AKfycbx3L1LS2ygzH5k8821ziUOsMggLHgPPBcaq0W4kbyYjJliPS97XpABnhIeQ9pgr_I2n/exec";
 
 
@@ -588,6 +589,7 @@ function keluar() {
 }
 
 
+/* ===== LOGIKA ASLI ===== */
 function loadData() {
   fetch(API_URL + "?action=farma_list")
     .then(r => r.json())
@@ -685,28 +687,12 @@ function simpan() {
 
 function resetForm() {
   edit_row.value = "";
-  nama_outlet.value = "";
-  online.value = "";
-  no_spk.value = "";
-  no_id_paket.value = "";
-  nominal.value = "";
-  no_faktur.value = "";
-  pic_salesman.value = "";
+  document.querySelectorAll("input").forEach(i => i.value = "");
 }
-
-
-window.history.pushState(null, "", window.location.href);
-window.onpopstate = function () {
-  window.history.pushState(null, "", window.location.href);
-};
 
 
 loadData();
 </script>
-
-
 </body>
 </html>
-
-
 
