--- a/input.html
+++ b/input.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>ADMIN - FARMA</title>
+
 <style>
 * { box-sizing: border-box; }
 
@@ -656,51 +657,31 @@ function filterTable() {
 
 function editData(d) {
   edit_row.value = d._row;
-
-  nama_outlet.value  = d["Nama Outlet"] || "";
-  online.value       = d["Online / Tidak"] || "";
-  no_spk.value       = d["No SPK"] || "";
-  no_id_paket.value  = d["No ID Paket"] || "";
-  nominal.value      = d["Nominal"] || "";
-  no_faktur.value    = d["No Faktur"] || "";
-  pic_salesman.value = d["PIC Salesman"] || "";
-
+  nama_outlet.value = d["Nama Outlet"];
+  online.value = d["Online / Tidak"];
+  no_spk.value = d["No SPK"];
+  no_id_paket.value = d["No ID Paket"];
+  nominal.value = d["Nominal"];
+  no_faktur.value = d["No Faktur"];
+  pic_salesman.value = d["PIC Salesman"];
   window.scrollTo({ top: 0, behavior: "smooth" });
 }
 
+function simpan() {
+  if (!nama_outlet.value || !online.value || !no_spk.value ||
+      !no_id_paket.value || !nominal.value ||
+      !no_faktur.value || !pic_salesman.value) {
+    swal("Peringatan", "Semua field wajib diisi", "warning");
+    return;
+  }
 
-    function simpan() {
-    if (edit_row.value) {
-      fetch(API_URL + "?" + new URLSearchParams({
-        action: "farma_update",
-        pin: sessionStorage.getItem("farma_pin"), // 🔥 WAJIB
-        row: edit_row.value,
-        nama_outlet: nama_outlet.value,
-        online: online.value,
-        no_spk: no_spk.value,
-        no_id_paket: no_id_paket.value,
-        nominal: nominal.value,
-        no_faktur: no_faktur.value,
-        pic_salesman: pic_salesman.value
-      }))
-      .then(r => r.json())
-      .then(res => {
-        if (res.error) {
-          swal("Gagal", res.error, "error");
-          return;
-        }
-        swal("Berhasil", "Data FARMA diperbarui", "success");
-        resetForm();
-        loadData();
-      });
-    }
-
-
-  // ===== UPDATE =====
-  if (ROLE === "farma") {
-    // 🔵 UPDATE FARMA
+  // =====================
+  // UPDATE
+  // =====================
+  if (edit_row.value) {
     fetch(API_URL + "?" + new URLSearchParams({
       action: "farma_update",
+      pin: sessionStorage.getItem("farma_pin"), // 🔥 wajib
       row: edit_row.value,
       nama_outlet: nama_outlet.value,
       online: online.value,
@@ -710,33 +691,54 @@ function editData(d) {
       no_faktur: no_faktur.value,
       pic_salesman: pic_salesman.value
     }))
-    .then(() => {
-      swal("Berhasil", "Data FARMA diperbarui", "success");
+    .then(r => r.json())
+    .then(res => {
+      if (res.error) {
+        swal("Gagal", res.error, "error");
+        return;
+      }
+      swal("Berhasil", "Data diperbarui", "success");
       resetForm();
       loadData();
     });
 
-  } else if (ROLE === "admin") {
-    // 🔴 UPDATE ADMIN
+  }
+  // =====================
+  // ADD
+  // =====================
+  else {
     fetch(API_URL + "?" + new URLSearchParams({
-      action: "admin_update",
-      row: edit_row.value,
-      keterangan: keterangan.value,
-      locatore: locatore.value
+      action: "farma_add",
+      pin: sessionStorage.getItem("farma_pin"),
+      nama_outlet: nama_outlet.value,
+      online: online.value,
+      no_spk: no_spk.value,
+      no_id_paket: no_id_paket.value,
+      nominal: nominal.value,
+      no_faktur: no_faktur.value,
+      pic_salesman: pic_salesman.value
     }))
-    .then(() => {
-      swal("Berhasil", "Data ADMIN diperbarui", "success");
+    .then(r => r.json())
+    .then(res => {
+      if (res.error) {
+        swal("Gagal", res.error, "error");
+        return;
+      }
+      swal("Berhasil", "Data disimpan", "success");
       resetForm();
       loadData();
     });
   }
 }
 
+
+/* ===== RESET FORM ===== */
 function resetForm() {
   edit_row.value = "";
-  document.querySelectorAll("input").forEach(i => i.value = "");
+  document.querySelectorAll(".form-grid input").forEach(i => i.value = "");
 }
 
+/* ===== INIT ===== */
 loadData();
 </script>
 <script>
