--- a/input.html
+++ b/input.html
@@ -86,6 +86,14 @@ body {
 .form-field {
   max-width: 520px;
 }
+/* ===== DROPDOWN ICON (KHUSUS SELECT) ===== */
+.form-field select {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='black' stroke-width='2'%3E%3Cpolyline points='6 9 12 15 18 9'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 18px center;
+  background-size: 16px;
+  cursor: pointer;
+}
 
 label {
   font-size: 13px;
