--- a/input.html
+++ b/input.html
@@ -450,7 +450,7 @@ select {
     <input id="no_faktur">
   </div>
   <div class="form-field">
-    <label>PIC Salesmen<span class="required">*</span></label>
+    <label>PIC Salesman<span class="required">*</span></label>
     <input id="pic_salesman">
   </div>
 </div>
@@ -560,7 +560,7 @@ select {
           <path d="M4 20c2-4 14-4 16 0"/>
         </svg>
       </span>
-      PIC
+      PIC Salesman
     </th>
 
     <th>
